[package]
name = "advent-of-rust-2024"
version = "0.1.0"
edition = "2021"
authors = ["James Youngman <james@youngman.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
clap = "4"
itertools = "0.13"
regex = "1"
rustc-hash = "2.1.0"
disjoint = "0.8"
patricia_tree = "0.8"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "day01"
[[bin]]
name = "day02"
[[bin]]
name = "day03"
[[bin]]
name = "day04"
[[bin]]
name = "day05"
[[bin]]
name = "day06"
[[bin]]
name = "day07"
[[bin]]
name = "day08"
[[bin]]
name = "day09"
[[bin]]
name = "day10"
[[bin]]
name = "day11"
[[bin]]
name = "day12"
[[bin]]
name = "day13"
[[bin]]
name = "day14"
[[bin]]
name = "day15"
[[bin]]
name = "day16"
[[bin]]
name = "day17"
[[bin]]
name = "day18"
[[bin]]
name = "day19"
[[bin]]
name = "day20"
[[bin]]
name = "day22"
[[bin]]
name = "day23"
[[bin]]
name = "day24"
[[bin]]
name = "day25"
